# libmembus

./: .gitignore  CMakeLists.txt  FIXES.md  LICENSE  PROJECT.txt  README.md  clean.sh  conanfile.py  run.sh
bench/: CMakeLists.txt  bench_libmembus.cpp  plot_results.py
bench/results/: latest.json  summary.md
cmake/: doxygen.cmake  getLatestGitTag.cmake  getLatestStableGitTag.cmake  getTargetBuildPath.cmake  libmembusConfig.cmake.in  readProjectConfig.cmake  stripSymbolsPostbuild.cmake  wantClang.cmake  wantGcc.cmake
cmake/repo/: backward.cmake  boost.cmake  catch2.cmake  cxxopts.cmake  temporal.cmake
docs/: mainpage.md
examples/: CMakeLists.txt  memcmd_control.cpp  memkv_state.cpp  memmsg_pingpong.cpp  memvid_dummy_frames.cpp
include/: libmembus-internal.h  libmembus.h
include/libmembus/: helpers.h  memaud.h  memcmd.h  memkv.h  memmap.h  memmsg.h  mempkt.h  memvid.h  select.h  sys.h
prv/ext/cmake/src/main/cpp/: sys.cpp
prv/ext/cmake/src/main/headers/: libmembus.h
prv/ext/cmake/src/main/headers/libmembus/: blank.h  sys.h
prv/ext/cmake/src/test/cpp/: main.cpp
prv/ext/conan/: conanfile.py
prv/ext/docker/: Dockerfile  docker.sh
prv/ext/gradle/: build.gradle  settings.gradle
prv/ext/npm/src/node-main/cpp/: main.cpp
prv/ext/npm/src/node-main/headers/: libmembus.h
prv/ext/npm/src/node-main/headers/libmembus/: napiwrapper.h
prv/ext/npm/src/node-test/js/: test.js
prv/ext/pip/src/py/cpp/: main.cpp
prv/ext/pip/src/py/headers/: libmembus.h
prv/ext/pip/src/pytest/py/: test.py
prv/install/: MANIFEST.txt  pkgconfig.pc.cmake.in
prv/sh/: help.sh  test.sh  uninstall.sh
prv/test/: Dockerfile  docker.sh
sh/: get-latest-git-tag.sh  get-latest-stable-git-tag.sh
source/: CMakeLists.txt
source/cpp/: memaud.cpp  memcmd.cpp  memkv.cpp  memmap.cpp  memmsg.cpp  mempkt.cpp  memvid.cpp  select.cpp  sys.cpp
src/: boost.cmake
src/main/: CMakeLists.txt
src/main/cpp/: libmembus_internal.h  memaud.cpp  memmap.cpp  memmsg.cpp  memvid.cpp  sys.cpp
src/main/headers/: libmembus.h
src/main/headers/libmembus/: memaud.h  memmsg.h  memvid.h
src/test/: CMakeLists.txt
src/test/cpp/: main.cpp
test/: CMakeLists.txt
test/cpp/: ipc_smoke.cpp  main.cpp  test_custom.cpp  test_helpers.cpp  test_memaud.cpp  test_memcmd.cpp  test_memkv.cpp  test_memmap.cpp  test_memmsg.cpp  test_mempkt.cpp  test_memvid.cpp  test_select.cpp
